--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,11 @@ file(GLOB_RECURSE C_HEADERS "src/*.h")
 
 option(WIN32GUI_BUILD_DLL "Build shared library instead of static" OFF)
 
-if(WIN32GUI_BUILD_DLL)
-    add_library(${PROJECT_NAME} SHARED include/Win32Gui.h ${C_SOURCES} ${C_HEADERS})
-else()
-    add_library(${PROJECT_NAME} STATIC include/Win32Gui.h ${C_SOURCES} ${C_HEADERS})
-endif()
+# if(WIN32GUI_BUILD_DLL)
+#     add_library(${PROJECT_NAME} SHARED include/Win32Gui.h ${C_SOURCES} ${C_HEADERS})
+# else()
+    
+# endif()
+add_library(${PROJECT_NAME} STATIC include/Win32Gui.h ${C_SOURCES} ${C_HEADERS})
 
 target_link_libraries(${PROJECT_NAME} PUBLIC user32.lib gdi32.lib kernel32.lib)
