--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,8 @@ else()
     add_library(${PROJECT_NAME} STATIC ${C_SOURCES} ${C_HEADERS})
 endif()
 
-target_link_libraries(${PROJECT_NAME} PUBLIC user32.lib gdi32.lib kernel32.lib)
+if (MINGW)
+    target_link_libraries(${PROJECT_NAME} PUBLIC libuser32.a libgdi32.a libkernel32.a)
+elseif(MSVC)
+    target_link_libraries(${PROJECT_NAME} PUBLIC user32.lib gdi32.lib kernel32.lib)
+endif()
