--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ else()
 endif()
 
 if (MINGW)
-    target_link_libraries(${PROJECT_NAME} PUBLIC libuser32.a libgdi32.a libkernel32.a)
+    target_link_libraries(${PROJECT_NAME} PUBLIC user32.lib gdi32.lib kernel32.lib)
+    # target_link_libraries(${PROJECT_NAME} PUBLIC libuser32.a libgdi32.a libkernel32.a)
 elseif(MSVC)
     target_link_libraries(${PROJECT_NAME} PUBLIC user32.lib gdi32.lib kernel32.lib)
 endif()
